# my-jarvis

./: .env.example  .github-sync-ignore  .gitignore  CHANGELOG.md  CLAUDE.md  MIGRATE_API_ERROR_STANDARD.md  Makefile  README.md  RELEASE_NOTES.md  azure-pipelines.yml  docker-compose.community.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/agent/: graph.py  nodes_community.py  registry.py  state.py
backend/channels/: base.py  discord.py  slack.py  telegram.py  web.py  whatsapp.py  zalo.py  zalo_bot.py
backend/core/: checkpointer.py  config.py  context_guard.py  deps.py  edition.py  evidence.py  headers.py  injection.py  pagination.py  rate_limit.py  redis.py  security.py  supervision.py
backend/db/: session.py
backend/docs/: FOUNDATION_EXAMPLES.py
backend/llm/: budget.py  cache.py  embeddings.py  gateway.py  router.py
backend/mcp/: client.py  loader.py  proxy.py  registry.py
backend/memory/: consolidation.py  context_builder.py  conversation_memory.py  extraction.py  knowledge_graph.py  preference_learning.py  service.py  skill_learning.py  user_profile.py
backend/services/: achievements.py  agent_tasks.py  billing.py  browser.py  context_engine.py  conversation.py  crud.py  custom_tools.py  data_export.py  event_bus.py  google_oauth.py  habits.py  pattern_detector.py  proactive.py  push.py  storage.py  trigger_engine.py  user.py  vision.py
backend/tests/: conftest.py  test_agent.py  test_api.py  test_browser.py  test_core.py  test_e2e.py  (+7 more)
(+223 files in other folders)
