[project]
name = "my-jarvis-backend"
version = "4.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3",
    "redis>=5.2",
    "pydantic-settings>=2.7",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "httpx>=0.28",
    "langgraph>=0.3",
    "langchain-core>=0.3",
    "langchain-google-genai>=2.1",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
    "langmem>=0.0.20",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary]>=3.1",
    "arq>=0.26",
    "minio>=7.2",
    "sentry-sdk[fastapi]>=2.0",
    "playwright>=1.49",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "httpx>=0.28",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
